--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/realms/demo-realm
+          issuer-uri: http://localhost:8080/realms/english-learning-realm
 
 server:
   port: 8083
