--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -15,6 +15,13 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/realms/english-learning-realm
+  data:
+    redis:
+      url: ${REDIS_URL}
+      ssl:
+        enabled: true # Enable SSL if REDIS_URL uses rediss://
+  cache:
+    type: redis
 
 server:
   servlet:
