feat(web): Add admin web UI
- Implement i18n
- Add radix ui component
- Implement access denied page
- Add default avatars

--- a/learning-content-service/src/main/resources/application.yml
+++ b/learning-content-service/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    open-in-view: false
   datasource:
     url: jdbc:postgresql://localhost:5432/learning-content
     driverClassName: org.postgresql.Driver
