--- a/admin-web/package.json
+++ b/admin-web/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.16",
     "@types/axios": "^0.9.36",
     "@types/react-redux": "^7.1.34",
