--- a/learning-content-service/src/main/resources/application.yml
+++ b/learning-content-service/src/main/resources/application.yml
@@ -21,7 +21,7 @@ server:
   servlet:
     context-path: /
   port: 8081
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
