feat(admin): revamp layout and integrate Kafka
- Implemented new sidebar component
- Removed unused components
- Integrated with Kafka for events

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -27,7 +27,7 @@ server:
   servlet:
     context-path: /
   port: 8083
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
