--- a/learning-content-service/src/main/resources/application.yml
+++ b/learning-content-service/src/main/resources/application.yml
@@ -16,7 +16,18 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/realms/english-learning-realm
-
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.add.type.headers: false
+    consumer:
+      group-id: learning-content-service-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
 server:
   servlet:
     context-path: /
