--- a/admin-web/package.json
+++ b/admin-web/package.json
@@ -19,9 +19,11 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/react-table": "^8.21.3",
     "@types/axios": "^0.9.36",
     "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.3.3",
@@ -40,7 +42,8 @@
     "redux-thunk": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
-    "zod": "^4.1.12"
+    "vaul": "^1.1.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
