--- a/admin-web/package.json
+++ b/admin-web/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.10.1",
+    "@stomp/stompjs": "^7.2.1",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-table": "^8.21.3",
     "@types/axios": "^0.9.36",
