--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -8,11 +8,11 @@ spring:
           issuer-uri: http://localhost:8080/realms/english-learning-realm
 
 server:
-  port: 8083
+  port: 8084
   servlet:
     context-path: /
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
 
