--- a/learning-content-service/pom.xml
+++ b/learning-content-service/pom.xml
@@ -115,9 +115,10 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session-data-redis</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
