--- a/learner-web/package.json
+++ b/learner-web/package.json
@@ -44,6 +44,7 @@
     "react-i18next": "^16.3.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "react-youtube": "^10.1.0",
     "redux-thunk": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
@@ -55,6 +56,7 @@
     "@types/node": "^24.9.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/youtube-player": "^5.5.11",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
