feat(learn): Enhance shadowing experience
- Added record audio feature
- Added keyboard shortcuts help
- Added sentence display component
- Added lp service route to gateway

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -48,6 +48,12 @@ spring:
             - Path=/api/learning-contents/**
           filters:
             - StripPrefix=2
+        - id: lp-service
+          uri: http://localhost:8089
+          predicates:
+            - Path=/api/lp/**
+          filters:
+            - StripPrefix=2
 
         - id: notification-service
           uri: lb://notification-service
