--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -3,7 +3,9 @@ server:
 spring:
   application:
     name: discovery-server
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
+
+
+#eureka:
+#  client:
+#    register-with-eureka: false
+#    fetch-registry: false
