--- a/dictionary-service/src/main/resources/application.yml
+++ b/dictionary-service/src/main/resources/application.yml
@@ -25,6 +25,9 @@ spring:
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+logging:
+  level:
+    org.springframework.security: DEBUG
 
 worker:
   api-key: ${WORKER_API_KEY}
